Calls gdk_threads_enter/leave without gdk_threads_init

Fix GTK+ multi-threading.

https://bugzilla.gnome.org/show_bug.cgi?id=610003